[RE-25] Added Docker image build  (#18)
* [RE-25] Adding Docker builld and push stage

* [RE-25] Adding Docker builld and push stage

* [RE-25] Adding Dockerfile and certificate for building image

Adjusting CircleCI pipeline config

* [RE-25] Adjusting CircleCI pipeline config

* [RE-25] Adjusting CircleCI pipeline config for new release strategy

Co-authored-by: Constantin Runtov <Constantin.Runtov@endava.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,6 @@ jobs:
       PROJECT_NAME: << parameters.project_name >>
     
     executor: dotnet_executor
-    # docker:
-    #   - image: mcr.microsoft.com/dotnet/sdk:5.0
     steps:
       - checkout
       - run:
@@ -46,7 +44,7 @@ jobs:
       #       - output/Build/
 
   pack_code:
-    parameters: # parameters are at the job level
+    parameters:
       project_name:
         type: string
         default: Dummy_project
@@ -55,10 +53,6 @@ jobs:
     executor: dotnet_executor
     steps:
       - checkout
-      # - attach_workspace:
-      #     # Must be absolute path or relative path from working_directory
-      #     at: /root/project/output/Build/
-      
       - run:
           name: Configure Nuget
           command: |
@@ -82,7 +76,7 @@ jobs:
             then
               CPACK="Debug"
               VSUFFIX=$CIRCLE_BRANCH
-            elif [[ "$CIRCLE_BRANCH" == "release" ]];
+            elif [[ "$CIRCLE_BRANCH" == "release/"* ]];
             then
               CPACK="Release"
             fi
@@ -104,32 +98,132 @@ jobs:
             --store-password-in-clear-text   
       
             dotnet nuget push Nuget/ --source "${PROJECT_NAME}_Artifactory"
-            
+
+  build_image:
+    parameters:
+      project_name:
+        type: string
+        default: Dummy_project
+      image_name:
+        type: string
+        default: test_tcd
+    environment:
+      PROJECT_NAME: "<< parameters.project_name >>"
+      IMAGE_NAME: "tcd.jfrog.io/tcd-docker/<< parameters.image_name >>"
+    executor:
+    docker:
+      - image: circleci/golang:1.15
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.7
+      - run:
+          name: Setup Environment variables
+          command: |
+            set -ex
+
+            ProjectPath=./Source/SingleSignOn/SingleSignOn/SingleSignOn.csproj
+            AppVersion=$(grep "<VersionPrefix>.*</VersionPrefix>" $ProjectPath \
+                         | sed -E 's/<.{0,1}VersionPrefix>//g' \
+                         | sed -E 's/^[ \t]*//g')
+
+            if [[ "$CIRCLE_BRANCH" == "develop" ]];
+            then
+              VSUFFIX="$AppVersion-$CIRCLE_BRANCH"
+            elif [[ "$CIRCLE_BRANCH" == "release/"* ]];
+            then
+              VSUFFIX="$AppVersion-$(echo $CIRCLE_BRANCH | sed -s 's/release\///g')"
+            elif [[ "$CIRCLE_BRANCH" == "feature/RE-25" ]];
+            then
+              VSUFFIX="$AppVersion-$CIRCLE_BRANCH"
+            fi
+
+            echo """export AppVersion=$AppVersion """ >> $BASH_ENV
+            echo """export VersionTag=$VSUFFIX """ >> $BASH_ENV
+
+      - run:
+          name: Build Docker Image
+          command: |
+            set -ex
+
+            docker build --tag $IMAGE_NAME:$VersionTag \
+              --build-arg NUGET_REPO_URL=$ARTIFACTORY_URL \
+              --build-arg NUGET_REPO_USER=$ARTIFACTORY_USER \
+              --build-arg NUGET_REPO_PASS=$ARTIFACTORY_PASSWORD \
+              --build-arg CERTIFICATE_PASSWORD=$CERTIFICATE_PASSWORD \
+              --build-arg DATABASE_HOST=$DATABASE_HOST \
+              --build-arg DATABASE_PORT=$DATABASE_PORT \
+              --build-arg DATABASE_NAME=$DATABASE_NAME \
+              --build-arg DATABASE_USERNAME=$DATABASE_USERNAME \
+              --build-arg DATABASE_PASSWORD=$DATABASE_PASSWORD \
+              --build-arg CORE_RABBITMQ_HOSTNAME=$CORE_RABBITMQ_HOSTNAME \
+              --build-arg CORE_RABBITMQ_PORT=$CORE_RABBITMQ_PORT \
+              --build-arg CORE_RABBITMQ_USERNAME=$CORE_RABBITMQ_USERNAME \
+              --build-arg CORE_RABBITMQ_PASSWORD=$CORE_RABBITMQ_PASSWORD \
+              --build-arg CORE_RABBITMQ_VIRTUALHOST=$CORE_RABBITMQ_VIRTUALHOST \
+              --file ./Resources/Docker/Dockerfile .
+      - run:
+          name: Login to TCD Artifactory
+          command: |
+            set -ex
+
+            echo $ARTIFACTORY_PASSWORD | docker login -u $ARTIFACTORY_USER --password-stdin tcd.jfrog.io
+
+      - run:
+          name: Push Docker Image
+          command: |
+            set -ex
+
+             docker push $IMAGE_NAME:$VersionTag
+
+
+
 version: 2.1
 orbs:
   jira: circleci/jira@1.3.1
+  docker: circleci/docker@1.6.0
+
 workflows:
   BuildFlow:
     jobs:
       - build_code:
-          name: Build code
+          name: Build Code
           context: Tokens
           project_name: SingleSignOn
           post-steps:
             - jira/notify:
                 environment_type: development
-      
+
       - pack_code:
-          name: Pack and push to Artifactory
+          name: Pack and push nugets to Artifactory
           requires:
-            - "Build code"
+            - "Build Code"
           filters:
-            branches: 
+            branches:
               only:
               - develop
-              - release
+              - release/*
           context: Tokens
           project_name: SingleSignOn
           post-steps:
             - jira/notify:
-                environment_type: staging
+                environment_type: development
+
+      - build_image:
+          name: Docker Image Build
+          requires:
+            - "Build Code"
+            - "Pack and push nugets to Artifactory"
+          filters:
+            branches:
+              only:
+                - release/*
+#                - feature/RE-25
+          context:
+           - Tokens
+           - Connection_Details
+          project_name: SingleSignOn
+          image_name: tcd_sso
+          post-steps:
+            - jira/notify:
+                environment_type: production
