--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,10 @@
 [Application_Code]
 Sources/ @ArtiomCiobanu
 Database/ @ArtiomCiobanu
-^* @ArtiomCiobanu @Cute-Monster
 
 [CI/CD]
 Resources/ @Cute-Monster
+
+[All other stuff]
+.gitignore @ArtiomCiobanu @Cute-Monster
+README.md @artiomCiobanu @Cute-Monster
