[TSO-23] Bump WebApiBaseLibrary versions

--- a/Source/SingleSignOn/SingleSignOn/appsettings.json
+++ b/Source/SingleSignOn/SingleSignOn/appsettings.json
@@ -16,5 +16,8 @@
   "HashConfiguration": {
     "Salt": "TestSalt"
   },
-  "Urls": "https://[:]:5005;http://[:]:5004"
+  "Urls": "https://[:]:5005;http://[:]:5004",
+  "ConnectionStrings": {
+    "SSO_DB_CONNECTION_STRING": "Placeholder"
+  }
 }
