--- a/Resources/CI/.gitlab-ci.yml
+++ b/Resources/CI/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 include:
   - project: "the-coolest-developers/devops/shared-pilelines"
-    ref: develop
+    ref: v1.0.9
     file: "shared.yml"
 
 variables:
@@ -27,6 +27,8 @@ variables:
       --build-arg CORE_RABBITMQ_USERNAME="<Username_Here>"
       --build-arg CORE_RABBITMQ_PASSWORD="<Password_Here>"
       --build-arg CORE_RABBITMQ_VIRTUALHOST="${CORE_RABBITMQ_VIRTUALHOST}"
+      --build-arg ASPNETCORE_ENVIRONMENT="${CI_ENV_NAME}"
+
       '
 
 stages:
