--- a/Source/SingleSignOn/SingleSignOn.DataAccess/SingleSignOn.DataAccess.csproj
+++ b/Source/SingleSignOn/SingleSignOn.DataAccess/SingleSignOn.DataAccess.csproj
@@ -9,6 +9,11 @@
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
-        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.1.1" />
     </ItemGroup>
+
+    <!-- TCD writen nugets -->
+    <ItemGroup>
+        <PackageReference Include="WebApiBaseLibrary.DataAccess" Version="1.1.2" />
+    </ItemGroup>
+        
 </Project>
