--- a/Source/SingleSignOn/SingleSignOn/Properties/launchSettings.json
+++ b/Source/SingleSignOn/SingleSignOn/Properties/launchSettings.json
@@ -24,8 +24,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5005;http://localhost:5004",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "SSO_DB_CONNECTION_STRING": "Server=52.57.106.5; Port=5433; Database=TCD_SSO; Username=TCD_SSO_Master; password=uEYsKTvPw7i2w4eGjWRzuAN5T;"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Release": {
@@ -35,8 +34,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5005;http://localhost:5004",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Release",
-        "SSO_DB_CONNECTION_STRING": "Server=52.57.106.5; Port=5433; Database=TCD_SSO; Username=TCD_SSO_Master; password=uEYsKTvPw7i2w4eGjWRzuAN5T;"
+        "ASPNETCORE_ENVIRONMENT": "Release"
       }
     }
   }
